Removing the db code and just making it basically work

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="assets/gn.css" media="screen">
   <link rel="print stylesheet" type="text/css" href="assets/gn_print.css" media="print">
-  <script type="text/javascript" src="src/jquery-1.4.4.min.js"></script>
+  <!-- <script type="text/javascript" src="src/jquery-1.4.4.min.js"></script> -->
   <script type="text/javascript" src="src/gn.js"></script>
 </head>
 <body>
   <div id="mainForm">
-	<a href="#" id="newSong">✚</a>
-	<a href="#" id="toggleArea">↨</a>
-	<input type="text" id="songTitle">
-	<a href="#" id="deleteSong">✖</a>
-	<input type="hidden" id="songId">
-	<textarea id="songArea"></textarea>
+	<textarea id="songArea">
+Got a good reason, for taking the easy way out: E7
+Got a good reason, for taking the easy way out: A7 E7
+She was a day____ tripper, one way ticket yeah: F#
+It took me so____ long to find out, and I found out: A7 G#7 C# B
+	</textarea>
   </div>
 
   <div id="mainDisplay">
@@ -48,5 +48,10 @@
 	<ul>
 	</ul>
   </div>
+
+  <script>
+	init();
+  </script>
+
 </body>
 </html>
